--- a/nodes/ndnode.yaml
+++ b/nodes/ndnode.yaml
@@ -54,71 +54,58 @@ proxies:
   server: 156.251.179.135
   tfo: false
   type: ss
-- client-fingerprint: chrome
-  name: 🇭🇰 香港3|@stairnode
-  password: 20a5d874-4387-446b-b616-de6c98ef0ee2
-  port: 12221
-  server: hxkad246454.nkrpjj.cn
-  skip-cert-verify: false
-  sni: nkrpjj.cn
-  type: trojan
-- client-fingerprint: chrome
-  name: 🇭🇰 香港4|@stairnode
-  password: 253bc477d4e43c209f2d427272968280
-  port: 443
-  server: 218.102.206.179
-  skip-cert-verify: true
-  sni: 23.45.86.28
-  type: trojan
-- alterId: 2
+- alterId: 0
   cipher: auto
   client-fingerprint: chrome
-  name: 🇭🇰 香港5|@stairnode
-  network: ws
-  port: 80
-  server: 1e426046-t0fds0-t12cnj-1ol97.hk.p5pv.com
+  name: 🇭🇰 香港3|@stairnode
+  port: 25013
+  server: 38.147.188.160
   skip-cert-verify: false
   tfo: false
   tls: false
   type: vmess
-  uuid: 93fb69fc-77cf-11ee-85ee-f23c91369f2d
-  ws-opts:
-    headers:
-      Host: 1e426046-t0fds0-t12cnj-1ol97.hk.p5pv.com
-    path: /
+  uuid: e90bfc71-1a0a-43e8-9272-6be036e9d88e
 - client-fingerprint: chrome
-  name: 🇭🇰 香港6|@stairnode
+  name: 🇭🇰 香港4|@stairnode
   password: 253bc477d4e43c209f2d427272968280
-  port: 443
-  server: xx.avxqx.cn
+  port: 6928
+  server: 223.111.144.13
   skip-cert-verify: true
-  sni: fe2.update.microsoft.com
+  sni: www.baidu.com
   type: trojan
-- cipher: aes-128-gcm
-  client-fingerprint: chrome
-  name: 🇹🇼 台湾|@stairnode
-  password: 01721e43-5389-4f97-b21c-900abb2bda9e
-  port: 12008
-  server: awes35lesl.blhao0o.dpdns.org
-  tfo: false
-  type: ss
 - alterId: 64
   cipher: auto
   client-fingerprint: chrome
-  name: 🇹🇼 台湾2|@stairnode
-  port: 50002
-  server: 47.116.166.178
+  name: 🇭🇰 香港5|@stairnode
+  port: 47272
+  server: 183.240.245.250
   skip-cert-verify: false
   tfo: false
   tls: false
   type: vmess
   uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+- client-fingerprint: chrome
+  name: 🇭🇰 香港6|@stairnode
+  password: 253bc477d4e43c209f2d427272968280
+  port: 1546
+  server: 36.150.215.188
+  skip-cert-verify: true
+  sni: www.baidu.com
+  type: trojan
 - cipher: chacha20-ietf-poly1305
   client-fingerprint: chrome
-  name: 🇹🇼 台湾3|@stairnode
-  password: 60f661f4-579c-45c9-8156-e0db88911dc6
-  port: 10089
-  server: 125.228.180.215
+  name: 🇹🇼 台湾|@stairnode
+  password: 34393fa0-a7d3-4c4a-bd18-c70764f73a6d
+  port: 10061
+  server: 118.170.208.178
+  tfo: false
+  type: ss
+- cipher: chacha20-ietf-poly1305
+  client-fingerprint: chrome
+  name: 🇹🇼 台湾2|@stairnode
+  password: 5063e044-694e-400c-8db7-76223e86b6fb
+  port: 10097
+  server: 125.228.31.117
   tfo: false
   type: ss
 - cipher: rc4-md5
@@ -127,19 +114,19 @@ proxies:
   password: efanccyun
   plugin: obfs
   plugin-opts:
-    host: 202508150964186-YHuMkhj2A5.download.microsoft.com
+    host: 202508150964186-OTqy9HvgIK.download.microsoft.com
     mode: http
   port: 8766
   server: cn01.efan8867801.xyz
   tfo: false
   type: ss
 - client-fingerprint: chrome
-  name: 🇯🇵 日本4|@stairnode
+  name: 🇯🇵 日本3|@stairnode
   password: 253bc477d4e43c209f2d427272968280
-  port: 1924
-  server: xx.baku7.com
+  port: 3270
+  server: 36.150.215.203
   skip-cert-verify: true
-  sni: 23.45.86.28
+  sni: www.baidu.com
   type: trojan
 - cipher: aes-256-gcm
   client-fingerprint: chrome
@@ -158,28 +145,28 @@ proxies:
   tfo: false
   type: ss
 - client-fingerprint: chrome
-  name: 🇸🇬 新加坡|@stairnode
+  name: 🇯🇵 日本4|@stairnode
   password: 253bc477d4e43c209f2d427272968280
-  port: 9160
-  server: xx.baku7.com
+  port: 40950
+  server: 36.150.215.203
   skip-cert-verify: true
-  sni: 23.45.86.28
+  sni: www.baidu.com
   type: trojan
 - client-fingerprint: chrome
-  name: 🇯🇵 日本3|@stairnode
+  name: 🇸🇬 新加坡|@stairnode
   password: 253bc477d4e43c209f2d427272968280
-  port: 4613
-  server: xx.baku7.com
+  port: 3043
+  server: 36.150.215.203
   skip-cert-verify: true
-  sni: 23.45.86.28
+  sni: www.baidu.com
   type: trojan
 - client-fingerprint: chrome
   name: 🇸🇬 新加坡2|@stairnode
   password: 253bc477d4e43c209f2d427272968280
-  port: 3206
-  server: xx.baku7.com
+  port: 4397
+  server: 36.150.215.203
   skip-cert-verify: true
-  sni: 23.45.86.28
+  sni: www.baidu.com
   type: trojan
 - alterId: 2
   cipher: auto
@@ -211,7 +198,7 @@ proxies:
   password: efanccyun
   plugin: obfs
   plugin-opts:
-    host: 202508150964186-YHuMkhj2A5.download.microsoft.com
+    host: 202508150964186-OTqy9HvgIK.download.microsoft.com
     mode: http
   port: 8774
   server: cn01.efan8867801.xyz
@@ -221,17 +208,17 @@ proxies:
   name: 🇺🇸 美国3|@stairnode
   password: 253bc477d4e43c209f2d427272968280
   port: 4801
-  server: xx.baku7.com
+  server: 36.150.215.203
   skip-cert-verify: true
-  sni: 23.45.86.28
+  sni: 36.156.102.116
   type: trojan
 - client-fingerprint: chrome
   name: 🇺🇸 美国4|@stairnode
   password: 253bc477d4e43c209f2d427272968280
-  port: 4317
-  server: xx.baku7.com
+  port: 7177
+  server: 36.150.215.203
   skip-cert-verify: true
-  sni: 23.45.86.28
+  sni: www.baidu.com
   type: trojan
 proxy-groups:
 - name: 🚀 节点选择
@@ -247,12 +234,11 @@ proxy-groups:
   - 🇭🇰 香港6|@stairnode
   - 🇹🇼 台湾|@stairnode
   - 🇹🇼 台湾2|@stairnode
-  - 🇹🇼 台湾3|@stairnode
   - 🇯🇵 日本|@stairnode
-  - 🇯🇵 日本4|@stairnode
-  - 🇯🇵 日本2|@stairnode
-  - 🇸🇬 新加坡|@stairnode
   - 🇯🇵 日本3|@stairnode
+  - 🇯🇵 日本2|@stairnode
+  - 🇯🇵 日本4|@stairnode
+  - 🇸🇬 新加坡|@stairnode
   - 🇸🇬 新加坡2|@stairnode
   - 🇸🇬 新加坡3|@stairnode
   - 🇸🇬 新加坡4|@stairnode
@@ -272,12 +258,11 @@ proxy-groups:
   - 🇭🇰 香港6|@stairnode
   - 🇹🇼 台湾|@stairnode
   - 🇹🇼 台湾2|@stairnode
-  - 🇹🇼 台湾3|@stairnode
   - 🇯🇵 日本|@stairnode
-  - 🇯🇵 日本4|@stairnode
-  - 🇯🇵 日本2|@stairnode
-  - 🇸🇬 新加坡|@stairnode
   - 🇯🇵 日本3|@stairnode
+  - 🇯🇵 日本2|@stairnode
+  - 🇯🇵 日本4|@stairnode
+  - 🇸🇬 新加坡|@stairnode
   - 🇸🇬 新加坡2|@stairnode
   - 🇸🇬 新加坡3|@stairnode
   - 🇸🇬 新加坡4|@stairnode
@@ -301,12 +286,11 @@ proxy-groups:
   - 🇭🇰 香港6|@stairnode
   - 🇹🇼 台湾|@stairnode
   - 🇹🇼 台湾2|@stairnode
-  - 🇹🇼 台湾3|@stairnode
   - 🇯🇵 日本|@stairnode
-  - 🇯🇵 日本4|@stairnode
-  - 🇯🇵 日本2|@stairnode
-  - 🇸🇬 新加坡|@stairnode
   - 🇯🇵 日本3|@stairnode
+  - 🇯🇵 日本2|@stairnode
+  - 🇯🇵 日本4|@stairnode
+  - 🇸🇬 新加坡|@stairnode
   - 🇸🇬 新加坡2|@stairnode
   - 🇸🇬 新加坡3|@stairnode
   - 🇸🇬 新加坡4|@stairnode
@@ -327,12 +311,11 @@ proxy-groups:
   - 🇭🇰 香港6|@stairnode
   - 🇹🇼 台湾|@stairnode
   - 🇹🇼 台湾2|@stairnode
-  - 🇹🇼 台湾3|@stairnode
   - 🇯🇵 日本|@stairnode
-  - 🇯🇵 日本4|@stairnode
-  - 🇯🇵 日本2|@stairnode
-  - 🇸🇬 新加坡|@stairnode
   - 🇯🇵 日本3|@stairnode
+  - 🇯🇵 日本2|@stairnode
+  - 🇯🇵 日本4|@stairnode
+  - 🇸🇬 新加坡|@stairnode
   - 🇸🇬 新加坡2|@stairnode
   - 🇸🇬 新加坡3|@stairnode
   - 🇸🇬 新加坡4|@stairnode
@@ -353,12 +336,11 @@ proxy-groups:
   - 🇭🇰 香港6|@stairnode
   - 🇹🇼 台湾|@stairnode
   - 🇹🇼 台湾2|@stairnode
-  - 🇹🇼 台湾3|@stairnode
   - 🇯🇵 日本|@stairnode
-  - 🇯🇵 日本4|@stairnode
-  - 🇯🇵 日本2|@stairnode
-  - 🇸🇬 新加坡|@stairnode
   - 🇯🇵 日本3|@stairnode
+  - 🇯🇵 日本2|@stairnode
+  - 🇯🇵 日本4|@stairnode
+  - 🇸🇬 新加坡|@stairnode
   - 🇸🇬 新加坡2|@stairnode
   - 🇸🇬 新加坡3|@stairnode
   - 🇸🇬 新加坡4|@stairnode
@@ -379,12 +361,11 @@ proxy-groups:
   - 🇭🇰 香港6|@stairnode
   - 🇹🇼 台湾|@stairnode
   - 🇹🇼 台湾2|@stairnode
-  - 🇹🇼 台湾3|@stairnode
   - 🇯🇵 日本|@stairnode
-  - 🇯🇵 日本4|@stairnode
-  - 🇯🇵 日本2|@stairnode
-  - 🇸🇬 新加坡|@stairnode
   - 🇯🇵 日本3|@stairnode
+  - 🇯🇵 日本2|@stairnode
+  - 🇯🇵 日本4|@stairnode
+  - 🇸🇬 新加坡|@stairnode
   - 🇸🇬 新加坡2|@stairnode
   - 🇸🇬 新加坡3|@stairnode
   - 🇸🇬 新加坡4|@stairnode
@@ -406,12 +387,11 @@ proxy-groups:
   - 🇭🇰 香港6|@stairnode
   - 🇹🇼 台湾|@stairnode
   - 🇹🇼 台湾2|@stairnode
-  - 🇹🇼 台湾3|@stairnode
   - 🇯🇵 日本|@stairnode
-  - 🇯🇵 日本4|@stairnode
-  - 🇯🇵 日本2|@stairnode
-  - 🇸🇬 新加坡|@stairnode
   - 🇯🇵 日本3|@stairnode
+  - 🇯🇵 日本2|@stairnode
+  - 🇯🇵 日本4|@stairnode
+  - 🇸🇬 新加坡|@stairnode
   - 🇸🇬 新加坡2|@stairnode
   - 🇸🇬 新加坡3|@stairnode
   - 🇸🇬 新加坡4|@stairnode
@@ -449,12 +429,11 @@ proxy-groups:
   - 🇭🇰 香港6|@stairnode
   - 🇹🇼 台湾|@stairnode
   - 🇹🇼 台湾2|@stairnode
-  - 🇹🇼 台湾3|@stairnode
   - 🇯🇵 日本|@stairnode
-  - 🇯🇵 日本4|@stairnode
-  - 🇯🇵 日本2|@stairnode
-  - 🇸🇬 新加坡|@stairnode
   - 🇯🇵 日本3|@stairnode
+  - 🇯🇵 日本2|@stairnode
+  - 🇯🇵 日本4|@stairnode
+  - 🇸🇬 新加坡|@stairnode
   - 🇸🇬 新加坡2|@stairnode
   - 🇸🇬 新加坡3|@stairnode
   - 🇸🇬 新加坡4|@stairnode
